# pyvio

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
pyvio/adapters/: mock_sensor.py  phyphox.py  pps_gpio.py  readers.py  serial.py  writers.py
pyvio/core/: config.py
pyvio/core/domain/: integrator.py  interpolator.py  sample.py  samples.py  state.py
pyvio/core/domain/params/: stream_params.py  sync_params.py
pyvio/core/domain/pipeline/: ahrs.py  consumer.py  eskf.py  interpolator.py  simple_estimator.py  stage.py  streamer.py  visualizer.py  visualizer_state2d.py  visualizer_state3d.py
pyvio/core/ports/: integrator.py  interpolator.py  reader.py  sample.py  sensor.py  trajectory.py  writer.py
pyvio/core/services/: eskf.py  integrator.py
pyvio/core/services/clock/: clock.py  estimator.py  pps.py  unwrap.py
pyvio/utils/: lla2enu.py  trajectory.py
scripts/: main.py  phyphox_test.py  pps_test.py  receiver.py  synthetic_data copy.py  synthetic_data.py  test.py
scripts/configs/: config.yaml  receiver.yaml
scripts/data/: test1.pyvio
src/: config.yaml  main.py
src/adapters/: phyphox.py  pps_gpio.py  serial.py
src/core/: config.py
src/core/domain/: samples.py  sync_params.py  timestamp.py
src/core/domain/pipeline/: ahrs.py  visualizer.py
src/core/ports/: pps.py  sensor.py
src/core/services/clock/: clock.py  pps.py  unwrap.py
src/pyvio/utils/: stats_deque.py
src/utils/: gpio.py  stats.py
src/utils/kalman/: simple.py
tests/: test_eskf.py  test_integrator.py  test_interpolator.py  test_state.py
(+4 files in other folders)
