[project]
name = "pyvio"
version = "0.1.0"
description = "Python VIO"
authors = [{name = "David" , email = "druiz0992@gmail.com"}]
dependencies = [
    "pyserial>=3.5","matplotlib>=3.10", "numpy>=2.3.5"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]